Added the Hierarchy

--- a/M1_Beginner/Spark_1.ipynb
+++ b/M1_Beginner/Spark_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "e316a700",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "1a929561",
    "metadata": {},
    "outputs": [
@@ -21,21 +21,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/18 11:59:52 WARN SparkContext: Another SparkContext is being constructed (or threw an exception in its constructor). This may indicate an error, since only one SparkContext should be running in this JVM (see SPARK-2243). The other SparkContext was created at:\n",
-      "org.apache.spark.api.java.JavaSparkContext.<init>(JavaSparkContext.scala:58)\n",
-      "sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
-      "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:247)\n",
-      "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
-      "py4j.Gateway.invoke(Gateway.java:238)\n",
-      "py4j.commands.ConstructorCommand.invokeConstructor(ConstructorCommand.java:80)\n",
-      "py4j.commands.ConstructorCommand.execute(ConstructorCommand.java:69)\n",
-      "py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "java.lang.Thread.run(Thread.java:750)\n",
-      "23/03/18 11:59:52 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "23/03/22 13:27:01 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
+      "23/03/22 13:27:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/03/22 13:27:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/03/22 13:27:03 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/03/22 13:27:03 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/03/22 13:27:03 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
      ]
     },
     {
@@ -48,7 +53,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.10:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.5:4043\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -64,23 +69,23 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7faa3c9aceb0>"
+       "<pyspark.sql.session.SparkSession at 0x7fc913be26a0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Creating Spark Session\n",
+    "#Creating Spark Session (It will executed in the Local Not in the Master Node)\n",
     "spark=SparkSession.builder.master(\"local[*]\").appName(\"demo\").getOrCreate()\n",
     "spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "8e1f753e",
    "metadata": {},
    "outputs": [
@@ -90,7 +95,7 @@
        "DataFrame[firstname: string, middlename: string, lastname: string, id: int, gender: string]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,32 +107,59 @@
     "        (\"Tony\",\"\",\"Stark\",4,\"F\"),\n",
     "        (\"Rajiv\",\"Mary\",\"Kumar\",5,\"F\")\n",
     "]\n",
+    "#Creating The Schema For the Dataset\n",
     "schema = StructType([ \\\n",
     "        StructField(\"firstname\",StringType(),True), \\\n",
     "        StructField(\"middlename\",StringType(),True), \\\n",
     "        StructField(\"lastname\",StringType(),True), \\\n",
     "        StructField(\"id\", IntegerType(), True),\\\n",
     "        StructField(\"gender\", StringType(), True)])\n",
+    "#Creating Spark DataFrame\n",
     "df = spark.createDataFrame(data=person_list,schema=schema)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "345b8a8b",
+   "execution_count": 4,
+   "id": "338dac89",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
       "                                                                                \r"
      ]
     },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+--------+---+------+\n",
+      "|firstname|middlename|lastname| id|gender|\n",
+      "+---------+----------+--------+---+------+\n",
+      "|    Berry|          |   Allen|  1|     M|\n",
+      "|   Oliver|     Queen|        |  2|     M|\n",
+      "|   Robert|          |Williams|  3|     M|\n",
+      "|     Tony|          |   Stark|  4|     F|\n",
+      "|    Rajiv|      Mary|   Kumar|  5|     F|\n",
+      "+---------+----------+--------+---+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Action\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "345b8a8b",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -151,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "ac7f9bf4",
    "metadata": {},
    "outputs": [
@@ -172,6 +204,46 @@
    "source": [
     "df.printSchema()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "712cfcac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15a3efff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5044a67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c21a3b46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8760c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -264,6 +336,22 @@
    "source": [
     "df2.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5d5aadf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "296cba22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3319,7 +3407,7 @@
    "source": [
     "from pyspark.sql.window import Window\n",
     "windowSpec = Window.partitionBy(\"DEPARTMENT_ID\").orderBy(\"SALARY\")\n",
-    "empDf.withColumn(\"salary_rank\", rank().over(windowSpec)).select(\"DEPARTMENT_ID\",\"SALARY\",\"salary_rank\").show(100)\n"
+    "empDf.withColumn(\"salary_rank\", rank().over(windowSpec)).select(\"DEPARTMENT_ID\",\"SALARY\",\"salary_rank\").show(100)"
    ]
   },
   {
