Created The Hierarchy

--- a/M2_ReadingFiles/M1_ReadingFiles.ipynb
+++ b/M2_ReadingFiles/M1_ReadingFiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "b1d49404",
    "metadata": {},
    "outputs": [],
@@ -13,37 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "b0ac7397",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/22 13:27:16 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
-      "23/03/22 13:27:16 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/22 13:27:17 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/22 13:27:17 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/22 13:27:17 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/22 13:27:17 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/22 13:27:17 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -54,7 +27,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.5:4044\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.229.237:4044\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -70,10 +43,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f2b1c4a4700>"
+       "<pyspark.sql.session.SparkSession at 0x7f97f0a40610>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "c4560b49",
    "metadata": {},
    "outputs": [
@@ -112,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "b9c0ec8d",
    "metadata": {},
    "outputs": [
@@ -137,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "8c06f9d9",
    "metadata": {},
    "outputs": [],
@@ -148,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "a04d808c",
    "metadata": {},
    "outputs": [
@@ -193,6 +166,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6451cd89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d04bff3",
    "metadata": {},
    "outputs": [],
    "source": []
