--- a/Spark3.ipynb
+++ b/Spark3.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/22 15:02:27 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
-      "23/03/22 15:02:27 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/03/23 13:35:54 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.229.237 instead (on interface wlp0s20f3)\n",
+      "23/03/23 13:35:54 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,12 +37,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/22 15:02:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/22 15:02:29 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/22 15:02:29 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/22 15:02:29 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/22 15:02:29 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/03/22 15:02:29 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
+      "23/03/23 13:35:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/03/23 13:35:55 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/03/23 13:35:55 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/03/23 13:35:55 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
      ]
     },
     {
@@ -55,7 +53,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.5:4045\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.229.237:4043\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -71,7 +69,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f86d40596a0>"
+       "<pyspark.sql.session.SparkSession at 0x7f4a09117730>"
       ]
      },
      "execution_count": 2,
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4756fb2c",
    "metadata": {},
    "outputs": [
