Recreate the hierarchy in Spark

--- a/RDD/M12_DataFrameToSQL/M1_Spark_To_Sql.ipynb
+++ b/RDD/M12_DataFrameToSQL/M1_Spark_To_Sql.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import *\n"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
