--- a/RDD/M2_ReadingFiles/M1_ReadingFiles.ipynb
+++ b/RDD/M2_ReadingFiles/M1_ReadingFiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b1d49404",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "b0ac7397",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/03/30 21:42:25 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
+      "23/03/30 21:42:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/03/30 21:42:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/03/30 21:42:27 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/03/30 21:42:27 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/03/30 21:42:27 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -27,7 +53,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.229.237:4044\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.5:4043\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -43,10 +69,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f97f0a40610>"
+       "<pyspark.sql.session.SparkSession at 0x7f6de7f626d0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "c4560b49",
    "metadata": {},
    "outputs": [
@@ -78,14 +104,14 @@
    ],
    "source": [
     "# Read data from HDFS path\n",
-    "df2 = spark.read.option(\"header\",True).option(\"delimiter\",\",\").csv(\"../Spark-main/departments.csv\")\n",
+    "df2 = spark.read.option(\"header\",True).option(\"delimiter\",\",\").csv(\"../../Spark-main/departments.csv\")\n",
     "# df2 = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/departments.csv\")\n",
     "df2.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "b9c0ec8d",
    "metadata": {},
    "outputs": [
@@ -103,14 +129,14 @@
     }
    ],
    "source": [
-    "df2 = spark.read.option(\"header\",True).option(\"delimiter\",\",\").option(\"inferSchema\",True).csv(\"../Spark-main/departments.csv\")\n",
+    "df2 = spark.read.option(\"header\",True).option(\"delimiter\",\",\").option(\"inferSchema\",True).csv(\"../../Spark-main/departments.csv\")\n",
     "# df2 = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/departments.csv\")\n",
     "df2.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "8c06f9d9",
    "metadata": {},
    "outputs": [],
@@ -121,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "a04d808c",
    "metadata": {},
    "outputs": [
