--- a/RDD/M5_Drop/M1_Drop.ipynb
+++ b/RDD/M5_Drop/M1_Drop.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 14:03:44 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.229.237 instead (on interface wlp0s20f3)\n",
-      "23/03/23 14:03:44 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/03/30 22:14:46 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
+      "23/03/30 22:14:46 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,15 +37,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 14:03:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4045. Attempting port 4046.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4046. Attempting port 4047.\n",
-      "23/03/23 14:03:46 WARN Utils: Service 'SparkUI' could not bind on port 4047. Attempting port 4048.\n"
+      "23/03/30 22:14:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/03/30 22:14:47 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/03/30 22:14:47 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/03/30 22:14:47 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
+      "23/03/30 22:14:47 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n"
      ]
     },
     {
@@ -58,7 +54,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.229.237:4048\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.5:4044\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -74,7 +70,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f682c178760>"
+       "<pyspark.sql.session.SparkSession at 0x7fd590283640>"
       ]
      },
      "execution_count": 2,
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2f1a6131",
    "metadata": {},
    "outputs": [
@@ -115,13 +111,13 @@
     }
    ],
    "source": [
-    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/employees.csv\")\n",
+    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../../Spark-main/employees.csv\")\n",
     "empDf.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b99991fa",
    "metadata": {},
    "outputs": [
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8104084b",
    "metadata": {},
    "outputs": [
@@ -193,8 +189,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6b4ec780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+---------+--------+------------+---------+----------+------+-------------+\n",
+      "|EMPLOYEE_ID|FIRST_NAME|LAST_NAME|   EMAIL|PHONE_NUMBER|HIRE_DATE|    JOB_ID|SALARY|DEPARTMENT_ID|\n",
+      "+-----------+----------+---------+--------+------------+---------+----------+------+-------------+\n",
+      "|        198|    Donald| OConnell|DOCONNEL|650.507.9833|21-JUN-07|  SH_CLERK|  2600|           50|\n",
+      "|        199|   Douglas|    Grant|  DGRANT|650.507.9844|13-JAN-08|  SH_CLERK|  2600|           50|\n",
+      "|        200|  Jennifer|   Whalen| JWHALEN|515.123.4444|17-SEP-03|   AD_ASST|  4400|           10|\n",
+      "|        201|   Michael|Hartstein|MHARTSTE|515.123.5555|17-FEB-04|    MK_MAN| 13000|           20|\n",
+      "|        202|       Pat|      Fay|    PFAY|603.123.6666|17-AUG-05|    MK_REP|  6000|           20|\n",
+      "|        203|     Susan|   Mavris| SMAVRIS|515.123.7777|07-JUN-02|    HR_REP|  6500|           40|\n",
+      "|        204|   Hermann|     Baer|   HBAER|515.123.8888|07-JUN-02|    PR_REP| 10000|           70|\n",
+      "|        205|   Shelley|  Higgins|SHIGGINS|515.123.8080|07-JUN-02|    AC_MGR| 12008|          110|\n",
+      "|        206|   William|    Gietz|  WGIETZ|515.123.8181|07-JUN-02|AC_ACCOUNT|  8300|          110|\n",
+      "|        100|    Steven|     King|   SKING|515.123.4567|17-JUN-03|   AD_PRES| 24000|           90|\n",
+      "|        101|     Neena|  Kochhar|NKOCHHAR|515.123.4568|21-SEP-05|     AD_VP| 17000|           90|\n",
+      "|        102|       Lex|  De Haan| LDEHAAN|515.123.4569|13-JAN-01|     AD_VP| 17000|           90|\n",
+      "|        103| Alexander|   Hunold| AHUNOLD|590.423.4567|03-JAN-06|   IT_PROG|  9000|           60|\n",
+      "|        104|     Bruce|    Ernst|  BERNST|590.423.4568|21-MAY-07|   IT_PROG|  6000|           60|\n",
+      "|        105|     David|   Austin| DAUSTIN|590.423.4569|25-JUN-05|   IT_PROG|  4800|           60|\n",
+      "|        106|     Valli|Pataballa|VPATABAL|590.423.4560|05-FEB-06|   IT_PROG|  4800|           60|\n",
+      "|        107|     Diana|  Lorentz|DLORENTZ|590.423.5567|07-FEB-07|   IT_PROG|  4200|           60|\n",
+      "|        108|     Nancy|Greenberg|NGREENBE|515.124.4569|17-AUG-02|    FI_MGR| 12008|          100|\n",
+      "|        109|    Daniel|   Faviet| DFAVIET|515.124.4169|16-AUG-02|FI_ACCOUNT|  9000|          100|\n",
+      "|        110|      John|     Chen|   JCHEN|515.124.4269|28-SEP-05|FI_ACCOUNT|  8200|          100|\n",
+      "+-----------+----------+---------+--------+------------+---------+----------+------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "empDf.drop(\"COMMISSION_PCT\",\"MANAGER_ID\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2104ebb3",
    "metadata": {},
    "outputs": [],
    "source": []
