--- a/RDD/M11_Case/M1_Case.ipynb
+++ b/RDD/M11_Case/M1_Case.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import *\n"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
