Changes added in GroupBy

--- a/RDD/M10_GroupBy/GroupBy.ipynb
+++ b/RDD/M10_GroupBy/GroupBy.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import *\n"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
