Case Statment Added

--- a/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
+++ b/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
@@ -8,7 +8,11 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType"
+    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType\n",
+    "\n",
+    "#Note :\n",
+    "#        Variables are PascalCase For ex : (StructType)\n",
+    "#        Methods are camelCase For ex : (printSchema)"
    ]
   },
   {
@@ -21,8 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/30 18:27:24 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.206.237 instead (on interface wlp0s20f3)\n",
-      "23/03/30 18:27:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/04/03 15:21:36 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.43.237 instead (on interface wlp0s20f3)\n",
+      "23/04/03 15:21:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,7 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/30 18:27:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/04/03 15:21:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/04/03 15:21:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     },
     {
@@ -50,7 +55,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.206.237:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.43.237:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -66,7 +71,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7efd104e4670>"
+       "<pyspark.sql.session.SparkSession at 0x7fcea40ec430>"
       ]
      },
      "execution_count": 2,
@@ -126,9 +131,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
       "                                                                                \r"
      ]
     },
