--- a/RDD/M4_Rename/M1_Rename.ipynb
+++ b/RDD/M4_Rename/M1_Rename.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ab300e3b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "98f48bd9",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 13:59:35 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.229.237 instead (on interface wlp0s20f3)\n",
-      "23/03/23 13:59:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/04/03 17:05:29 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 172.17.0.1 instead (on interface docker0)\n",
+      "23/04/03 17:05:29 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,14 +37,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 13:59:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4045. Attempting port 4046.\n",
-      "23/03/23 13:59:36 WARN Utils: Service 'SparkUI' could not bind on port 4046. Attempting port 4047.\n"
+      "23/04/03 17:05:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/04/03 17:05:30 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/04/03 17:05:30 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/04/03 17:05:30 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n"
      ]
     },
     {
@@ -57,7 +53,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.229.237:4047\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://172.17.0.1:4043\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -73,10 +69,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f8cafa65820>"
+       "<pyspark.sql.session.SparkSession at 0x7f0ebc33a0d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4756fb2c",
    "metadata": {},
    "outputs": [
@@ -114,13 +110,22 @@
     }
    ],
    "source": [
-    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/employees.csv\")\n",
+    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../../Spark-main/employees.csv\")\n",
     "empDf.printSchema()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3f43a7e",
+   "metadata": {},
+   "source": [
+    "### Syntax :\n",
+    "### empDf.withColumnRenamed(\"old_column\",\"new_column\")"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2ef52410",
    "metadata": {},
    "outputs": [
